# 4JLibs

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build-package.cmd  build-package.ps1
Input/: 4J_Input.cpp  CMakeLists.txt  INP_ForceFeedback.cpp  INP_ForceFeedback.h  INP_Keyboard.cpp  INP_Keyboard.h  INP_Main.cpp  INP_Main.h  INP_StringCheck.cpp  INP_StringCheck.h  LinkedList.cpp  LinkedList.h  stdafx.h
Profile/: 4J_Profile.cpp  CMakeLists.txt  PRO_RichPresence.cpp  stdafx.cpp  stdafx.h
Render/: 4J_Render.cpp  CMakeLists.txt  CompiledShaders.h  PS_ForceLOD.h  PS_ScreenClear.h  PS_ScreenSpace.h  PS_Standard.h  PS_Standard2.h  PS_Standard3.h  PS_Standard4.h  PS_TextureProjection.h  Profiler.h  Renderer.h  RendererCBuff.cpp  RendererCore.cpp  RendererMatrix.cpp  RendererState.cpp  RendererTexture.cpp  RendererVertex.cpp  VS_Compressed.h  VS_PF3_TF2_CB4_NB4_XW1.h  VS_PF3_TF2_CB4_NB4_XW1_Lighting.h  VS_PF3_TF2_CB4_NB4_XW1_TexGen.h  VS_ScreenClear.h  VS_ScreenSpace.h  stdafx.h
Render/libpng/: png.h  pnglibconf.h  pngread.c  pngwrite.c
Render/microprofile/: microprofile.cpp  microprofile.h  microprofile_html.h
Render/zlib/: zconf.h
Storage/: 4J_Storage.cpp  CMakeLists.txt  STO_DLC.cpp  STO_DLC.h  STO_Main.cpp  STO_Main.h  STO_SaveGame.cpp  STO_SaveGame.h  stdafx.h
Windows_Libs/Dev/Input/: INP_Main.cpp  INP_Main.h  Input.vcxproj.filters
Windows_Libs/Dev/Profile/: Profile.vcxproj.filters
Windows_Libs/Dev/Render/: Render.vcxproj.filters
Windows_Libs/Dev/Storage/: 4J_Storage.cpp  STO_DLC.cpp  STO_DLC.h  STO_Main.cpp  STO_Main.h  STO_SaveGame.cpp  STO_SaveGame.h  Storage.vcxproj  Storage.vcxproj.filters  stdafx.h
include/4JLibs/: 4J_Input.h  4J_Profile.h  4J_Render.h  4J_Storage.h  Platform.h  extraX64.h
